chat-base-app/kubernetes/auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: "auth"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghcr.io/quintennelen/auth:latest
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: "auth"
  labels:
    service: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
