chat-base-app/kubernetes/chat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: "chat"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: ghcr.io/quintennelen/chat:latest
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: "chat"
  labels:
    service: chat
spec:
  selector:
    app: chat
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
