chat-base-app/kubernetes/static-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: ghcr.io/quintennelen/frontend:latest
        ports:
          - containerPort: 80
            name: http-web-svc
        
---
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: nginx
  ports:
  - name: static
    protocol: TCP
    port: 80
    targetPort: http-web-svc
